--- a/Coffee.html
+++ b/Coffee.html
@@ -61,6 +61,7 @@
 				<div id="overview" style="margin: 20px 0px 0px 0px; width:100%; height:50px"></div>
 			</div>
 			<div class="content_page" id="statisticsBalance" style="display:none;"></div>
+			<div class="content_page" id="statisticsCleanings" style="display:none;"></div>
 	
 	
 			<div class="content_page" id="cleaning" style="display:none;">
